Fixed overflow bug.

--- a/frontend/pages/admin.scss
+++ b/frontend/pages/admin.scss
@@ -40,5 +40,6 @@
     .main {
         flex-grow: 1;
         position: relative;
+        overflow: hidden;
     }
 }
